# xrpl-py-tui

./: .gitignore  app.py  dashboard.tcss  example.py  live_dashboard.py  main.py  pyproject.toml
messages/: __init__.py  xrpl_messages.py
state/: __init__.py  models.py  store.py
tests/: __init__.py  behave.ini  environment.py
tests/features/: connection.feature  ledger.feature  transaction.feature  wallet.feature
tests/helpers/: __init__.py  app_driver.py  assertions.py  xrpl_helpers.py
tests/steps/: __init__.py  common_steps.py  connection_steps.py  ledger_steps.py  transaction_steps.py  wallet_steps.py
utils/: __init__.py  xrp_amount.py
widgets/: __init__.py  accounts.py  ledger.py  modals.py  transactions.py
xrpl_client/: __init__.py  connection.py  subscriptions.py
